2008-04-05  Ilkka Tuohela <hile@iki.fi>

	* help/fi: Added Finnish translation by Jukka Heikkilä.

2008-03-01  Leonardo Ferreira Fontenelle  <leonardof@svn.gnome.org>

	* help/pt_BR/pt_BR.po: Updated Brazilian Portuguese translation.

2008-02-27  Gil Forcada  <gforcada@gnome.org>

	* help/ca/ca.po: Updated Catalan translation.

2008-02-26  Callum McKenzie  <callum@spooky-possum.org>

	* GNOME_CharpickerApplet.xml: Remove garbage at the end of the
	second-to-last line. Spotted by Krzysztof Kotlenga (bug #518625).

2008-02-11  Daniel Nylander <po@danielnylander.se>

	* help/sv/sv.po: Updated Swedish translation.
	
2008-02-10  Kjartan Maraas  <kmaraas@gnome.org>

	* charpick.schemas.in: add missing full stops in the long description.

2008-02-10  Callum McKenzie  <callum@spooky-possum.org>

	* charpick.c (charpicker_applet_fill): Add support for transparent
	panels. Based on a patch by Florian Mutter based on a bug filed by
	Luca Cavalli (see bug #413130).

2008-01-29  Claude Paroz  <claude@2xlibre.net>

	* help/fr/fr.po: Remove fuzzy from French translation.

2008-01-10  Gil Forcada  <gforcada@svn.gnome.org>

	* help/ca/ca.po: Added Catalan translation.
	* help/ca/figures/*.png: Added Catalan screenshot thanks to Joan Duran.
	* help/Makefile.am: Added ca to DOC_LINGUAS.

2008-01-08  Kjartan Maraas  <kmaraas@gnome.org>

	* help/C/char-palette.xml: Fix reference to button.
	Patch from Bob Mauchin. Closes bug #502352 (GHOP)

2007-12-02  Changwoo Ryu  <cwryu@debian.org>

	* help/ko/*: 
	* help/Makefile.am: Korean manual migrated to gnome-doc-utils from
	the old Sun manual.

2007-07-17  Jaap Haitsma <jaap@haitsma.org>

	* GNOME_CharpickerApplet.xml: use gtk-about i.s.o. gnome-stock-about
	Fixes bug #456955

	* charpick.c: (build_table), (about), (charpicker_applet_fill):
	Use g_set_application name such that the application name
	gets shown correctly in the about dialog. Convert usage of GtkTooltips
	to new tooltips API of GTK 2.12 Fixes bug #457145
