@@ -24,7 +24,7 @@
 	</oaf_attribute>
 	<oaf_attribute name="name" type="string" _value="Character Palette"/>
 	<oaf_attribute name="description" type="string" _value="Insert characters"/>
-	<oaf_attribute name="panel:icon" type="string" value="charpick.png"/>
+	<oaf_attribute name="panel:icon" type="string" value="accessories-character-map"/>
 	<oaf_attribute name="bugzilla:bugzilla" type="string" value="GNOME"/>
         <oaf_attribute name="bugzilla:product" type="string" value="gnome-applets"/>
         <oaf_attribute name="bugzilla:component" type="string" value="charpick"/>
