@@ -1,3 +1,12 @@
+2008-04-29  Jaap A. Haitsma  <jaap@haitsma.org>
+
+	reviewed by: Callum McKenzie
+
+	* GNOME_CharpickerApplet.server.in.in:
+	* Makefile.am:
+	* charpick.c: (about), (charpicker_applet_fill):
+	Use standard tango icon for charpick. Fixes bug #519765
+
 2008-04-05  Ilkka Tuohela <hile@iki.fi>
 
 	* help/fi: Added Finnish translation by Jukka Heikkilä.
